Expose Store interface

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.3",
   "description": "State management for React using Hooks with Typescript.",
   "main": "dist/index.js",
-  "types": "dist/interfaces.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "./node_modules/.bin/tsc --watch",
