--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@marconisi/use-global-hook",
+  "name": "use-global-hook-ts",
   "version": "0.2.0",
   "description": "State management for React using Hooks with Typescript.",
   "main": "dist/index.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MarcoNisi/use-global-hook.git"
+    "url": "git+https://github.com/MarcoNisi/use-global-hook-ts.git"
   },
   "keywords": [
     "react",
@@ -23,9 +23,9 @@
   "author": "Marco Nisi",
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/MarcoNisi/use-global-hook/issues"
+    "url": "https://github.com/MarcoNisi/use-global-hook-ts/issues"
   },
-  "homepage": "https://github.com/MarcoNisi/use-global-hook#readme",
+  "homepage": "https://github.com/MarcoNisi/use-global-hook-ts#readme",
   "devDependencies": {
     "@types/jest": "^24.0.17",
     "@types/react": ">=16.8",
