--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
   "peerDependencies": {
     "react": ">=16.8",
     "react-dom": ">=16.8"
-  }
+  },
+  "files": [
+    "dist/index.js",
+    "dist/index.d.ts"
+  ]
 }
