--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/MarcoNisi/use-global-hook-ts#readme",
   "devDependencies": {
+    "@types/clone-deep": "^4.0.1",
     "@types/jest": "^24.0.17",
     "@types/react": ">=16.8",
     "@types/react-dom": ">=16.8",
@@ -43,5 +44,8 @@
   "files": [
     "dist/index.js",
     "dist/index.d.ts"
-  ]
+  ],
+  "dependencies": {
+    "clone-deep": "^4.0.1"
+  }
 }
