--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "jest test.tsx",
+    "test": "jest lib.test.tsx utils.test.tsx",
     "watch": "./node_modules/.bin/tsc --watch",
     "build": "./node_modules/.bin/tsc --build",
     "release:patch": "npm run build && npm version patch && git push origin && git push origin --tags",
